--- a/water_sort/puzzle-n-survival/index.html
+++ b/water_sort/puzzle-n-survival/index.html
@@ -32,8 +32,9 @@
         <a style="font-size:small;" href="https://www.robertfidler.com/puzzle-n-survival/index.html" target="_blank">Решатель Water Sort и Ball Sort</a>
         <div style="clear: both; text-align: left;">
           <p>Ссылка выше ведёт на оригинальную версию, которую я использовал для создания своей версии решателя Water Sort. Особая благодарность автору.</p>
-	  <p>--------------------------------------------------------------</p>
-	  <p>Прокрутите вниз, чтобы прочитать инструкцию и выставить цвета.</p>
+	  <p class="highlight-box">
+		Прокрутите вниз, чтобы прочитать инструкцию и выставить цвета.
+	  </p>
         </div>
       </li>
     </ul>
