--- a/water_sort/puzzle-n-survival/index.html
+++ b/water_sort/puzzle-n-survival/index.html
@@ -71,7 +71,7 @@
 
       <button type="button" class="btn btn-info" data-bind="click: Step, enable: CanStep"
               style="flex: 1 1 0; min-width: 0; white-space: nowrap;">
-        Шаг <span class="glyphicon glyphicon-arrow-right"></span>
+        Вперед <span class="glyphicon glyphicon-arrow-right"></span>
       </button>
     </div>
 
