--- a/water_sort/puzzle-n-survival/index.html
+++ b/water_sort/puzzle-n-survival/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Настройка и решатель головоломки Purifying Reagents из игры Puzzle and Survival" />
+    <meta name="description" content="Настройка и решатель головоломки Сортировка Реагентов из игры Puzzle and Survival" />
     <meta name="author" content="470[TPM]OB-HAVE" />
     <title>Решатель Сортировки Реагентов в игре Puzzle &amp; Survival</title>
 
