--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1r4TgjPKlrVvnMRcixSi2eJN6YvJzPr-t/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1PZ-hrtC9rrOw-rqP_-aJLUvTh58oAplg/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/xlpl8lLqjCB4iw">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/6bnbobhcqkkRWw">
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
