--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1B-e9_NYKSsHgBEgBIvSzTGzgx8LiEzxx/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1-kTC5yS5AjXmR6Do3XAAC5YZN1MImGYX/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/28K6Xs6e9maXeA">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/4TzPF9CJVKU6CQ">
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
