--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort/puzzle-n-survival/index.html" target="_blank">
               🧪 Сортировка Реагентов онлайн
             </a>
-            <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort_new/index.html" target="_blank">
+            <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort_last/main/index.html" target="_blank">
               🧪 Сортировка Реагентов онлайн NEW
             </a>
           </div>
