--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1GZVCtUjfxuH4oH9O1AYd5StAs0uZHu7z/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1QyE7gEN3M-9OJIlOKOe3ENf2iPqEEmlG/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/UIeQ0r-0qtWfLA">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/q7DZhuQ1IaRujg">
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
