--- a/faq.html
+++ b/faq.html
@@ -433,7 +433,7 @@
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
-                    ❓ Почему бот при сборе ресурсов всегда выбирает топливо, и не меняет приоритет?<br>⚠️ Проверьте настройки сбора ресурсов.<br><br>Зайдите во вкладку "Сбор / Эвенты" → откройте настройки "Сбор ресурсов на плитках".<br>Убедитесь, что стоят галочки на нужных типах ресурсов (металл, кристалл, еда и т.д.).<br>Если выбрано только топливо — бот будет собирать только его.
+                    ❓ Почему бот при сборе ресурсов всегда выбирает топливо, и не меняет приоритет?<br>⚠️ Проверьте настройки сбора ресурсов.<br><br>Зайдите во вкладку "Сбор / Эвенты" → откройте настройки "Сбор ресурсов на плитках".<br>Убедитесь, что стоят галочки на нужных типах ресурсов (сталь, топливо, еда и т.д.).<br>Если выбрано только топливо — бот будет собирать только его.
                 </div>
             </div>
 
@@ -503,7 +503,7 @@
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
-                    ❓ Почему бот не распознаёт снаряжение?<br>⚠️ Возможно, дефолтные шаблоны снаряжения не подходят для вашего персонажа.<br><br>Что проверить и сделать:<br><br>Сделайте скриншоты снаряжения самостоятельно и добавьте их в шаблоны;<br><br>Убедитесь, что на иконках нет наложений (красных точек, сообщений и прочих элементов интерфейса);<br><br>Попробуйте изменить точность распознавания в настройках.
+                    ❓ Почему бот не распознаёт снаряжение?<br>⚠️ Возможно, дефолтные шаблоны снаряжения не подходят для вашего персонажа.<br><br>Что проверить и сделать:<br><br>Сделайте скриншоты снаряжения самостоятельно и добавьте их в шаблоны;<br><br>Убедитесь, что на иконках нет наложений (красных точек, сообщений и прочих элементов интерфейса);<br><br>Попробуйте изменить точность распознавания в настройках в меньшую сторону, что бы бот менее чувствительно реагировал на картинку (например 0,86).
                 </div>
             </div>
 
@@ -523,7 +523,8 @@
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
-                    ❓ На каком эмуляторе работает бот?<br>❌ Бот не требует эмулятора — он работает с официальным клиентом Windows.
+                    ❓ На каком эмуляторе работает бот?<br>❌ Бот не требует эмулятора — он работает с официальным клиентом игры для Windows. Скачать можно с офф. сайта. https://www.pnsofficial.com/pnsofficial/ztmslg/
+
                 </div>
             </div>
 
@@ -649,7 +650,7 @@
 
             <div class="faq-item" data-category="technical">
                 <div class="faq-question">
-                    <span>Бот не видит окно игры это может быть из-за того что у меня более 4 мониора?</span>
+                    <span>Бот не видит окно игры это может быть из-за того что у меня более 4-х мониторов?</span>
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
@@ -715,7 +716,7 @@
 
             <div class="faq-item" data-category="technical">
                 <div class="faq-question">
-                    <span>Если во время работы бота зайти активного персонажа с другого устройства — что произойдёт?</span>
+                    <span>Если во время работы бота зайти на активного персонажа с другого устройства — что произойдёт?</span>
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
@@ -945,4 +946,4 @@
 </body>
 </html>
 
-                    
+
