--- a/faq.html
+++ b/faq.html
@@ -510,7 +510,11 @@
                     <span class="faq-toggle">▼</span>
                 </div>
                 <div class="faq-answer">
-                    <br>✅ Да, есть.<br><br>В наших каналах есть подробные ролики по запуску мини-игр. Принцип один и тот же для всех — просто следуйте инструкции из видео.<br>📺 Ссылки на видео: (будут добавлены)
+                    <br>✅ Да, есть.<br><br>В наших каналах есть подробные ролики по запуску мини-игр. Принцип один и тот же для всех — просто следуйте инструкции из видео на youtube.<br>
+                    📺 Ссылки на видео:<br>
+                    • <a href="https://youtu.be/1U-w2Md72lE?si=g16-_Bha88MZs6YK" target="_blank">Мастер Тетрамино</a><br>
+                    • <a href="https://youtu.be/-GnibHXqEZ0?si=vwCR9dgwwX-cCm01" target="_blank">Укладчик Блоков</a><br>
+                    • <a href="https://youtu.be/NYociiFjpeY?feature=shared" target="_blank">Мастер Подбора</a>
                 </div>
             </div>
 
