--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                     ⬇ Скачать PNS Bot ▼
                 </button>
                 <div id="dropdown-download" class="dropdown-content">
-                    <a class="btn btn-google" href="https://drive.google.com/file/d/1XKTUHwpAEsXOX1nT7Dh-uuSHo22yKJha/view?usp=sharing" target="_blank">
+                    <a class="btn btn-google" href="https://drive.google.com/file/d/17aL7YNzOxHFix-t8K5dOAYVddnVKLSQx/view?usp=sharing" target="_blank">
                         📁 Скачать с GOOGLE DRIVE
                     </a>
-                    <a class="btn btn-yandex-inner" href="https://disk.yandex.ru/d/hO8f-3IsGbwSiQ" target="_blank">
+                    <a class="btn btn-yandex-inner" href="https://disk.yandex.ru/d/i9lJyGLp_-WEPA" target="_blank">
                         📁 Скачать с YANDEX DISK
                     </a>
                 </div>
